--- a/src/gestorcitas/views/MainWindowView.fxml
+++ b/src/gestorcitas/views/MainWindowView.fxml
@@ -2,13 +2,15 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.RadioMenuItem?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.input.KeyCodeCombination?>
@@ -19,13 +21,14 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="550.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gestorcitas.controllers.MainWindowController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="550.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gestorcitas.controllers.MainWindowController">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
           <Menu text="Clínica">
             <items>
               <MenuItem onAction="#onChangeName" text="Cambiar nombre..." />
+                  <MenuItem onAction="#onSave" text="Guardar" />
                   <Menu text="Idioma">
                      <items>
                         <RadioMenuItem selected="true" text="Español">
@@ -75,7 +78,15 @@
                      <top>
                         <HBox alignment="CENTER_RIGHT" prefHeight="48.0" spacing="5.0" BorderPane.alignment="CENTER">
                            <children>
-                              <TextField prefHeight="25.0" prefWidth="190.0" text="Buscar ...">
+                              <HBox alignment="CENTER_LEFT" HBox.hgrow="ALWAYS">
+                                 <children>
+                                    <Label fx:id="appointmentTabTitle" />
+                                 </children>
+                                 <padding>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                 </padding>
+                              </HBox>
+                              <TextField prefHeight="25.0" prefWidth="190.0" promptText="Buscar citas....">
                                  <HBox.margin>
                                     <Insets />
                                  </HBox.margin>
@@ -90,13 +101,6 @@
                      </top>
                      <center>
                         <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
-                           <center>
-                              <ListView maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
-                                 <BorderPane.margin>
-                                    <Insets bottom="15.0" left="15.0" />
-                                 </BorderPane.margin>
-                              </ListView>
-                           </center>
                            <right>
                               <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0" BorderPane.alignment="CENTER">
                                  <children>
@@ -105,7 +109,7 @@
                                           <Insets />
                                        </VBox.margin>
                                     </Button>
-                                    <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onRemoveAppointment" prefHeight="30.0" prefWidth="75.0" text="Eliminar">
+                                    <Button fx:id="removeAppointmentBtn" disable="true" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onRemoveAppointment" prefHeight="30.0" prefWidth="75.0" text="Eliminar">
                                        <VBox.margin>
                                           <Insets bottom="20.0" />
                                        </VBox.margin>
@@ -129,6 +133,22 @@
                                 </rowConstraints>
                               </GridPane>
                            </top>
+                           <center>
+                              <TableView fx:id="appointmentTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
+                                <columns>
+                                  <TableColumn fx:id="appointmentDateColumn" editable="false" prefWidth="75.0" text="Fecha" />
+                                    <TableColumn fx:id="appointmentTimeColumn" editable="false" prefWidth="75.0" text="Hora" />
+                                    <TableColumn fx:id="appointmentDoctorColumn" editable="false" prefWidth="75.0" text="Doctor" />
+                                    <TableColumn fx:id="appointmentPatientColumn" editable="false" prefWidth="75.0" text="Paciente" />
+                                </columns>
+                                 <BorderPane.margin>
+                                    <Insets bottom="15.0" left="15.0" />
+                                 </BorderPane.margin>
+                                 <columnResizePolicy>
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                 </columnResizePolicy>
+                              </TableView>
+                           </center>
                         </BorderPane>
                      </center>
                   </BorderPane>
@@ -140,7 +160,15 @@
                      <top>
                         <HBox alignment="CENTER_RIGHT" prefHeight="48.0" spacing="5.0" BorderPane.alignment="CENTER">
                            <children>
-                              <TextField prefHeight="25.0" prefWidth="190.0" text="Buscar ...">
+                              <HBox alignment="BOTTOM_LEFT" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS">
+                                 <children>
+                                    <Label fx:id="patientTabTitle" />
+                                 </children>
+                                 <padding>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                 </padding>
+                              </HBox>
+                              <TextField prefHeight="25.0" prefWidth="190.0" promptText="Buscar pacientes...">
                                  <HBox.margin>
                                     <Insets />
                                  </HBox.margin>
@@ -156,7 +184,7 @@
                      <right>
                         <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0">
                            <children>
-                              <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onShowPatient" prefHeight="30.0" prefWidth="75.0" text="Mostrar">
+                              <Button fx:id="showPatientBtn" disable="true" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onShowPatient" prefHeight="30.0" prefWidth="75.0" text="Mostrar">
                                  <VBox.margin>
                                     <Insets />
                                  </VBox.margin>
@@ -166,7 +194,7 @@
                                     <Insets />
                                  </VBox.margin>
                               </Button>
-                              <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onRemovePatient" prefHeight="30.0" prefWidth="75.0" text="Eliminar">
+                              <Button fx:id="removePatientBtn" disable="true" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onRemovePatient" prefHeight="30.0" prefWidth="75.0" text="Eliminar">
                                  <VBox.margin>
                                     <Insets />
                                  </VBox.margin>
@@ -178,11 +206,20 @@
                         </VBox>
                      </right>
                      <center>
-                        <ListView maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
+                        <TableView fx:id="patientTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
+                          <columns>
+                              <TableColumn fx:id="patientPhotoColumn" editable="false" prefWidth="104.0" sortable="false" text="Fotografía" />
+                            <TableColumn fx:id="patientIdColumn" editable="false" prefWidth="188.0" text="Identificador" />
+                            <TableColumn fx:id="patientNameColumn" editable="false" prefWidth="75.0" text="Nombre" />
+                              <TableColumn fx:id="patientPhoneColumn" editable="false" prefWidth="75.0" text="Teléfono" />
+                          </columns>
                            <BorderPane.margin>
                               <Insets bottom="15.0" left="15.0" />
                            </BorderPane.margin>
-                        </ListView>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
+                        </TableView>
                      </center>
                   </BorderPane>
                </content>
@@ -193,7 +230,15 @@
                      <top>
                         <HBox alignment="CENTER_RIGHT" prefHeight="48.0" spacing="5.0" BorderPane.alignment="CENTER">
                            <children>
-                              <TextField prefHeight="25.0" prefWidth="190.0" text="Buscar ...">
+                              <HBox alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS">
+                                 <children>
+                                    <Label fx:id="doctorTabTitle" />
+                                 </children>
+                                 <padding>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                 </padding>
+                              </HBox>
+                              <TextField prefHeight="25.0" prefWidth="190.0" promptText="Buscar doctores...">
                                  <HBox.margin>
                                     <Insets />
                                  </HBox.margin>
@@ -212,7 +257,7 @@
                      <right>
                         <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0">
                            <children>
-                              <Button minHeight="30.0" minWidth="50.0" mnemonicParsing="false" onAction="#onShowDoctor" prefWidth="75.0" text="Mostrar">
+                              <Button fx:id="showDoctorBtn" disable="true" minHeight="30.0" minWidth="50.0" mnemonicParsing="false" onAction="#onShowDoctor" prefWidth="75.0" text="Mostrar">
                                  <VBox.margin>
                                     <Insets />
                                  </VBox.margin>
@@ -222,7 +267,7 @@
                                     <Insets />
                                  </VBox.margin>
                               </Button>
-                              <Button minHeight="30.0" minWidth="50.0" mnemonicParsing="false" onAction="#onRemoveDoctor" prefWidth="75.0" text="Eliminar">
+                              <Button fx:id="removeDoctorBtn" disable="true" minHeight="30.0" minWidth="50.0" mnemonicParsing="false" onAction="#onRemoveDoctor" prefWidth="75.0" text="Eliminar">
                                  <VBox.margin>
                                     <Insets />
                                  </VBox.margin>
@@ -234,11 +279,23 @@
                         </VBox>
                      </right>
                      <center>
-                        <ListView maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
+                        <TableView fx:id="doctorTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
+                          <columns>
+                              <TableColumn fx:id="doctorPhotoColumn" editable="false" prefWidth="104.0" sortable="false" text="Fotografía" />
+                              <TableColumn fx:id="doctorIdColumn" editable="false" prefWidth="188.0" text="Identificador" />
+                              <TableColumn fx:id="doctorNameColumn" editable="false" prefWidth="75.0" text="Nombre" />
+                              <TableColumn fx:id="doctorPhoneColumn" editable="false" prefWidth="75.0" text="Teléfono" />
+                              <TableColumn fx:id="doctorVisitDaysColumn" editable="false" prefWidth="75.0" text="Días consulta" />
+                              <TableColumn fx:id="doctorVisitTimeColumn" editable="false" prefWidth="75.0" text="Horas consulta" />
+                              <TableColumn fx:id="doctorRoomColumn" editable="false" prefWidth="75.0" text="Sala" />
+                          </columns>
                            <BorderPane.margin>
                               <Insets bottom="15.0" left="15.0" />
                            </BorderPane.margin>
-                        </ListView>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
+                        </TableView>
                      </center>
                   </BorderPane>
                </content>
