--- a/src/gestorcitas/views/MainWindowView.fxml
+++ b/src/gestorcitas/views/MainWindowView.fxml
@@ -29,7 +29,11 @@
           <Menu text="Clínica">
             <items>
               <MenuItem onAction="#onChangeName" text="Cambiar nombre..." />
-                  <MenuItem onAction="#onSave" text="Guardar" />
+                  <MenuItem onAction="#onSave" text="Guardar">
+                     <accelerator>
+                        <KeyCodeCombination alt="UP" code="S" control="UP" meta="UP" shift="UP" shortcut="DOWN" />
+                     </accelerator></MenuItem>
+                  <MenuItem onAction="#onDiscardChanges" text="Descartar todos los cambios" />
                   <Menu text="Idioma">
                      <items>
                         <RadioMenuItem selected="true" text="Español">
@@ -215,17 +219,14 @@
                      <center>
                         <TableView fx:id="patientTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
                           <columns>
-                              <TableColumn fx:id="patientPhotoColumn" editable="false" prefWidth="104.0" sortable="false" text="Fotografía" />
-                            <TableColumn fx:id="patientIdColumn" editable="false" prefWidth="188.0" text="Identificador" />
-                            <TableColumn fx:id="patientNameColumn" editable="false" prefWidth="75.0" text="Nombre" />
-                              <TableColumn fx:id="patientPhoneColumn" editable="false" prefWidth="75.0" text="Teléfono" />
+                              <TableColumn fx:id="patientPhotoColumn" editable="false" maxWidth="70.0" minWidth="-Infinity" prefWidth="70.0" resizable="false" sortable="false" text="Fotografía" />
+                            <TableColumn fx:id="patientIdColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="Identificador" />
+                            <TableColumn fx:id="patientNameColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="Nombre" />
+                              <TableColumn fx:id="patientPhoneColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="Teléfono" />
                           </columns>
                            <BorderPane.margin>
                               <Insets bottom="15.0" left="15.0" />
                            </BorderPane.margin>
-                           <columnResizePolicy>
-                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                           </columnResizePolicy>
                         </TableView>
                      </center>
                   </BorderPane>
@@ -291,20 +292,17 @@
                      <center>
                         <TableView fx:id="doctorTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
                           <columns>
-                              <TableColumn fx:id="doctorPhotoColumn" editable="false" prefWidth="104.0" sortable="false" text="Fotografía" />
-                              <TableColumn fx:id="doctorIdColumn" editable="false" prefWidth="188.0" text="Identificador" />
-                              <TableColumn fx:id="doctorNameColumn" editable="false" prefWidth="75.0" text="Nombre" />
-                              <TableColumn fx:id="doctorPhoneColumn" editable="false" prefWidth="75.0" text="Teléfono" />
-                              <TableColumn fx:id="doctorVisitDaysColumn" editable="false" prefWidth="75.0" text="Días consulta" />
-                              <TableColumn fx:id="doctorVisitTimeColumn" editable="false" prefWidth="75.0" text="Horas consulta" />
-                              <TableColumn fx:id="doctorRoomColumn" editable="false" prefWidth="75.0" text="Sala" />
+                              <TableColumn fx:id="doctorPhotoColumn" editable="false" maxWidth="70.0" minWidth="-Infinity" prefWidth="70.0" resizable="false" sortable="false" text="Fotografía" />
+                              <TableColumn fx:id="doctorIdColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="Identificador" />
+                              <TableColumn fx:id="doctorNameColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="Nombre" />
+                              <TableColumn fx:id="doctorPhoneColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="Teléfono" />
+                              <TableColumn fx:id="doctorVisitDaysColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="Días consulta" />
+                              <TableColumn fx:id="doctorVisitTimeColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="Horas consulta" />
+                              <TableColumn fx:id="doctorRoomColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="Sala" />
                           </columns>
                            <BorderPane.margin>
                               <Insets bottom="15.0" left="15.0" />
                            </BorderPane.margin>
-                           <columnResizePolicy>
-                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                           </columnResizePolicy>
                         </TableView>
                      </center>
                   </BorderPane>
