--- a/src/gestorcitas/views/MainWindowView.fxml
+++ b/src/gestorcitas/views/MainWindowView.fxml
@@ -77,7 +77,7 @@
    <center>
       <TabPane fx:id="mainTabPane" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
         <tabs>
-          <Tab closable="false" text="Citas">
+          <Tab fx:id="appointmentTab" closable="false" text="Citas">
                <content>
                   <BorderPane>
                      <top>
@@ -94,12 +94,12 @@
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                  </padding>
                               </HBox>
-                              <TextField prefHeight="25.0" prefWidth="190.0" promptText="Buscar citas....">
+                              <TextField fx:id="appointmentSearchBox" prefHeight="25.0" prefWidth="190.0" promptText="Buscar citas....">
                                  <HBox.margin>
                                     <Insets />
                                  </HBox.margin>
                               </TextField>
-                              <Button mnemonicParsing="false" text="Buscar">
+                              <Button mnemonicParsing="false" onAction="#onSearch" text="Buscar">
                                  <HBox.margin>
                                     <Insets right="25.0" />
                                  </HBox.margin>
@@ -162,7 +162,7 @@
                   </BorderPane>
                </content>
             </Tab>
-            <Tab text="Pacientes">
+            <Tab fx:id="patientTab" text="Pacientes">
                <content>
                   <BorderPane>
                      <top>
@@ -179,12 +179,12 @@
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                  </padding>
                               </HBox>
-                              <TextField prefHeight="25.0" prefWidth="190.0" promptText="Buscar pacientes...">
+                              <TextField fx:id="patientSearchBox" prefHeight="25.0" prefWidth="190.0" promptText="Buscar pacientes...">
                                  <HBox.margin>
                                     <Insets />
                                  </HBox.margin>
                               </TextField>
-                              <Button mnemonicParsing="false" text="Buscar">
+                              <Button mnemonicParsing="false" onAction="#onSearch" text="Buscar">
                                  <HBox.margin>
                                     <Insets right="24.0" />
                                  </HBox.margin>
@@ -232,7 +232,7 @@
                   </BorderPane>
                </content>
             </Tab>
-            <Tab text="Doctores">
+            <Tab fx:id="doctorTab" text="Doctores">
                <content>
                   <BorderPane>
                      <top>
@@ -249,12 +249,12 @@
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                  </padding>
                               </HBox>
-                              <TextField prefHeight="25.0" prefWidth="190.0" promptText="Buscar doctores...">
+                              <TextField fx:id="doctorSearchBox" prefHeight="25.0" prefWidth="190.0" promptText="Buscar doctores...">
                                  <HBox.margin>
                                     <Insets />
                                  </HBox.margin>
                               </TextField>
-                              <Button mnemonicParsing="false" text="Buscar">
+                              <Button mnemonicParsing="false" onAction="#onSearch" text="Buscar">
                                  <HBox.margin>
                                     <Insets right="24.0" />
                                  </HBox.margin>
