--- a/src/gestorcitas/views/PatientsTab.fxml
+++ b/src/gestorcitas/views/PatientsTab.fxml
@@ -17,7 +17,7 @@
          <children>
             <HBox alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS">
                <children>
-                  <Label fx:id="patientTabTitle">
+                  <Label fx:id="tabTitle">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
@@ -27,7 +27,7 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
             </HBox>
-            <TextField fx:id="patientSearchBox" onAction="#onSearch" prefHeight="25.0" prefWidth="190.0" promptText="%tab.patients.search.prompt">
+            <TextField fx:id="searchBox" onAction="#onSearch" prefHeight="25.0" prefWidth="190.0" promptText="%tab.patients.search.prompt">
                <HBox.margin>
                   <Insets />
                </HBox.margin>
@@ -43,17 +43,17 @@
    <right>
       <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0">
          <children>
-            <Button fx:id="showPatientBtn" disable="true" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onShowPatient" prefHeight="30.0" prefWidth="75.0" text="%generic.show">
+            <Button fx:id="showBtn" disable="true" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onShow" prefHeight="30.0" prefWidth="75.0" text="%generic.show">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
             </Button>
-            <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onAddPatient" prefHeight="30.0" prefWidth="75.0" text="%generic.add">
+            <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onAdd" prefHeight="30.0" prefWidth="75.0" text="%generic.add">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
             </Button>
-            <Button fx:id="removePatientBtn" disable="true" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onRemovePatient" prefHeight="30.0" prefWidth="75.0" text="%generic.remove">
+            <Button fx:id="removeBtn" disable="true" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onRemove" prefHeight="30.0" prefWidth="75.0" text="%generic.remove">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
@@ -65,12 +65,12 @@
       </VBox>
    </right>
    <center>
-      <TableView fx:id="patientTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
+      <TableView fx:id="table" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
          <columns>
-            <TableColumn fx:id="patientPhotoColumn" editable="false" maxWidth="70.0" minWidth="-Infinity" prefWidth="70.0" resizable="false" sortable="false" text="%table.person.photo" />
-            <TableColumn fx:id="patientIdColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="%table.person.id" />
-            <TableColumn fx:id="patientNameColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="%table.person.name" />
-            <TableColumn fx:id="patientPhoneColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="%table.person.phone" />
+            <TableColumn fx:id="photoColumn" editable="false" maxWidth="70.0" minWidth="-Infinity" prefWidth="70.0" resizable="false" sortable="false" text="%table.person.photo" />
+            <TableColumn fx:id="idColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="%table.person.id" />
+            <TableColumn fx:id="nameColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="%table.person.name" />
+            <TableColumn fx:id="phoneColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="%table.person.phone" />
          </columns>
          <BorderPane.margin>
             <Insets bottom="15.0" left="15.0" />
