--- a/src/gestorcitas/views/DoctorsTab.fxml
+++ b/src/gestorcitas/views/DoctorsTab.fxml
@@ -17,7 +17,7 @@
          <children>
             <HBox alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS">
                <children>
-                  <Label fx:id="doctorTabTitle">
+                  <Label fx:id="tabTitle">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
@@ -27,7 +27,7 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
             </HBox>
-            <TextField fx:id="doctorSearchBox" onAction="#onSearch" prefHeight="25.0" prefWidth="190.0" promptText="%tab.doctors.search.prompt">
+            <TextField fx:id="searchBox" onAction="#onSearch" prefHeight="25.0" prefWidth="190.0" promptText="%tab.doctors.search.prompt">
                <HBox.margin>
                   <Insets />
                </HBox.margin>
@@ -46,17 +46,17 @@
    <right>
       <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0">
          <children>
-            <Button fx:id="showDoctorBtn" disable="true" minHeight="30.0" minWidth="50.0" mnemonicParsing="false" onAction="#onShowDoctor" prefWidth="75.0" text="%generic.show">
+            <Button fx:id="showBtn" disable="true" minHeight="30.0" minWidth="50.0" mnemonicParsing="false" onAction="#onShow" prefWidth="75.0" text="%generic.show">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
             </Button>
-            <Button minHeight="30.0" minWidth="50.0" mnemonicParsing="false" onAction="#onAddDoctor" prefWidth="75.0" text="%generic.add">
+            <Button minHeight="30.0" minWidth="50.0" mnemonicParsing="false" onAction="#onAdd" prefWidth="75.0" text="%generic.add">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
             </Button>
-            <Button fx:id="removeDoctorBtn" disable="true" minHeight="30.0" minWidth="50.0" mnemonicParsing="false" onAction="#onRemoveDoctor" prefWidth="75.0" text="%generic.remove">
+            <Button fx:id="removeBtn" disable="true" minHeight="30.0" minWidth="50.0" mnemonicParsing="false" onAction="#onRemove" prefWidth="75.0" text="%generic.remove">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
@@ -68,15 +68,15 @@
       </VBox>
    </right>
    <center>
-      <TableView fx:id="doctorTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
+      <TableView fx:id="table" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
          <columns>
-            <TableColumn fx:id="doctorPhotoColumn" editable="false" maxWidth="70.0" minWidth="-Infinity" prefWidth="70.0" resizable="false" sortable="false" text="%table.person.photo" />
-            <TableColumn fx:id="doctorIdColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="%table.person.id" />
-            <TableColumn fx:id="doctorNameColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="%table.person.name" />
-            <TableColumn fx:id="doctorPhoneColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="%table.person.phone" />
-            <TableColumn fx:id="doctorVisitDaysColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="%table.doctor.visitDays" />
-            <TableColumn fx:id="doctorVisitTimeColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="%table.doctor.visitHours" />
-            <TableColumn fx:id="doctorRoomColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="%table.doctor.room" />
+            <TableColumn fx:id="photoColumn" editable="false" maxWidth="70.0" minWidth="-Infinity" prefWidth="70.0" resizable="false" sortable="false" text="%table.person.photo" />
+            <TableColumn fx:id="idColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="%table.person.id" />
+            <TableColumn fx:id="nameColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="%table.person.name" />
+            <TableColumn fx:id="phoneColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="%table.person.phone" />
+            <TableColumn fx:id="visitDaysColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="%table.doctor.visitDays" />
+            <TableColumn fx:id="visitTimeColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="%table.doctor.visitHours" />
+            <TableColumn fx:id="roomColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="%table.doctor.room" />
          </columns>
          <BorderPane.margin>
             <Insets bottom="15.0" left="15.0" />
