--- a/src/gestorcitas/views/PatientForm.fxml
+++ b/src/gestorcitas/views/PatientForm.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -16,8 +17,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gestorcitas.controllers.PatientFormController">
    <children>
       <HBox alignment="BOTTOM_RIGHT" layoutX="249.0" layoutY="200.0" prefHeight="100.0" prefWidth="200.0">
          <children>
@@ -33,10 +33,10 @@
             </Button>
          </children>
       </HBox>
-      <GridPane layoutX="26.0" layoutY="47.0" prefHeight="193.0" prefWidth="224.0">
+      <GridPane layoutX="17.0" layoutY="43.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="232.0" prefWidth="255.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="107.0" minWidth="86.0" prefWidth="88.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="138.0" minWidth="100.0" prefWidth="136.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="107.0" minWidth="68.0" prefWidth="85.0000244140625" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="169.5999755859375" minWidth="100.0" prefWidth="169.5999755859375" />
         </columnConstraints>
         <rowConstraints>
             <RowConstraints />
@@ -66,10 +66,46 @@
                   <Insets left="10.0" />
                </GridPane.margin>
             </Text>
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField prefHeight="25.0" prefWidth="141.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <VBox alignment="CENTER_LEFT" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <children>
+                  <TextField alignment="BASELINE_LEFT" maxWidth="-Infinity" prefWidth="120.0">
+                     <VBox.margin>
+                        <Insets top="18.0" />
+                     </VBox.margin>
+                  </TextField>
+                  <Label alignment="CENTER_RIGHT" text="Label" />
+               </children>
+            </VBox>
+            <VBox alignment="CENTER_LEFT" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <children>
+                  <TextField alignment="BASELINE_LEFT">
+                     <VBox.margin>
+                        <Insets top="18.0" />
+                     </VBox.margin>
+                  </TextField>
+                  <Label alignment="CENTER_RIGHT" text="Label" />
+               </children>
+            </VBox>
+            <VBox alignment="CENTER_LEFT" GridPane.columnIndex="1" GridPane.rowIndex="3">
+               <children>
+                  <TextField alignment="BASELINE_LEFT" maxWidth="-Infinity" prefWidth="100.0">
+                     <VBox.margin>
+                        <Insets top="18.0" />
+                     </VBox.margin>
+                  </TextField>
+                  <Label alignment="CENTER_RIGHT" text="El DNI no contiene letra." />
+               </children>
+            </VBox>
+            <VBox alignment="CENTER_LEFT" GridPane.columnIndex="1" GridPane.rowIndex="4">
+               <children>
+                  <TextField alignment="BASELINE_LEFT" maxWidth="-Infinity" prefWidth="100.0">
+                     <VBox.margin>
+                        <Insets top="18.0" />
+                     </VBox.margin>
+                  </TextField>
+                  <Label alignment="CENTER_RIGHT" text="Label" />
+               </children>
+            </VBox>
          </children>
       </GridPane>
       <VBox alignment="TOP_RIGHT" layoutX="284.0" layoutY="14.0" prefHeight="200.0" prefWidth="144.0">
@@ -89,7 +125,7 @@
             </Button>
          </children>
       </VBox>
-      <Text fill="#726868" layoutX="17.0" layoutY="32.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Datos Personales">
+      <Text fill="#726868" layoutX="17.0" layoutY="32.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Datos personales">
          <font>
             <Font size="16.0" />
          </font>
